# jpksj-to-sql

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  NOTES.md  README.md  docker-compose.yml  docker-entrypoint.sh
.cursor/rules/: coding-style.mdc
.github/workflows/: release.yml  test.yml
data/: schema.sql
scripts/: ogr_groupby.sh
src/: cli.rs  context.rs  downloader.rs  lib.rs  main.rs  metadata.rs
src/loader/: admini_boundary.rs  gdal.rs  load_queue.rs  mapping.rs  mod.rs  xslx_helpers.rs  zip_traversal.rs
src/scraper/: api.rs  data_page.rs  download_queue.rs  downloader.rs  initial.rs  mod.rs  ref_parser.rs  table_read.rs  test_helpers.rs  year_parser.rs
test_data/fixtures/ksj/: KsjTmplt-A09.html  KsjTmplt-A10-2015.html  KsjTmplt-A11.html  KsjTmplt-A12.html  KsjTmplt-A13-2015.html  KsjTmplt-A16-2020.html  KsjTmplt-A17-2017.html  KsjTmplt-A18-2016.html  KsjTmplt-A19-2017.html  KsjTmplt-A22-2007.html  KsjTmplt-A22-2016.html  KsjTmplt-A23-2016.html  KsjTmplt-A24-2016.html  KsjTmplt-A25-2016.html  KsjTmplt-A27-2023.html  KsjTmplt-A29-2019.html  KsjTmplt-A30a5.html  KsjTmplt-A31a-2024.html  KsjTmplt-A31b-2024.html  KsjTmplt-A32-2023.html  KsjTmplt-A33-2024.html  KsjTmplt-A38-2020.html  KsjTmplt-A40-2024.html  KsjTmplt-A42.html  KsjTmplt-A43.html  KsjTmplt-A44.html  KsjTmplt-A45.html  KsjTmplt-A46-2021.html  KsjTmplt-A47-2021.html  KsjTmplt-A48-2021.html  KsjTmplt-A49-2024.html  KsjTmplt-A50-2020.html  KsjTmplt-A51-2024.html  KsjTmplt-A52-2023.html  KsjTmplt-A53-2024.html  KsjTmplt-A54-2023.html  KsjTmplt-A55-2022.html  KsjTmplt-C28-2021.html  KsjTmplt-G04-a.html  KsjTmplt-G04-c.html  (+59 more)
test_data/ksj/gml/codelist/: A31_R6_datalist.xlsx  A31a_R6_temporary_rivercode.xlsx  A33_permision_R6.xlsx  AdminCd.html  (+137 more)
test_data/shp/: src_blank.dbf  src_blank.shp  src_blank.shx
(+121 files in other folders)
