[package]
name = "jpksg-to-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "2.3.1"
bytesize = "1.3.2"
calamine = "0.26"
clap = { version = "4.5", features = ["derive"] }
flume = { version = "0.11.1", default-features = false, features = ["async"] }
futures-util = "0.3.31"
geo-types = "0.7"
indicatif = { version = "0.17.11", features = ["tokio"] }
once_cell = "1.20.3"
regex = "1"
reqwest = { version = "0.12", features = ["stream"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-geo-types-0_7"] }
url = "2"
zip = "2.2"
