[package]
name = "jpksj-to-sql"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-channel = "2.3.1"
bytesize = "1.3.2"
calamine = "0.26"
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20.2"
encoding_rs = "0.8"
futures-util = "0.3.31"
geo-types = "0.7"
indicatif = { version = "0.17.11", features = ["tokio"] }
km-to-sql = "0.1.1"
num_cpus = "1"
once_cell = "1.20.3"
regex = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-geo-types-0_7", "with-serde_json-1"] }
unicode-normalization = "0.1.24"
url = { version = "2", features = ["serde"] }

[dependencies.zip]
version = "2.2"
default-features = false
features = [
    "aes-crypto",
    # "bzip2",
    "deflate64",
    "deflate",
    "lzma",
    "time",
    # "zstd",
    # "xz",
]
